# cmake-qt4-skeleton

./: README.md
miniprogram/: CMakeLists.txt  mainwindow.cpp  miniprogram.pro  resources.qrc
miniprogram/scripts/: cmake_01_msbuild.cmd  cmake_02_run.cmd  readme.txt
